--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "faculty-dashboard",
   "version": "0.1.0",
   "private": true,
-  "homepage": "akashsuper2000.github.io/faculty-dashboard",
+  "homepage": "https://akashsuper2000.github.io/faculty-dashboard",
   "dependencies": {
     "gh-pages": "^2.1.1",
     "react": "^16.12.0",
@@ -10,12 +10,12 @@
     "react-scripts": "3.2.0"
   },
   "scripts": {
-    "start": "react-scripts start", 
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "yarn run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
