--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "homepage": "https://akashsuper2000.github.io/faculty-dashboard",
   "dependencies": {
+    "cors": "^2.8.5",
     "gh-pages": "^2.1.1",
+    "nodemon": "^2.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-password-strength": "^2.4.0",
