--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "gh-pages": "^2.1.1",
+    "mysql": "^2.17.1",
     "nodemailer": "^6.4.2",
     "nodemon": "^2.0.1",
     "react": "^16.12.0",
