--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
   "dependencies": {
     "cors": "^2.8.5",
     "gh-pages": "^2.1.1",
+    "moment": "^2.24.0",
     "mysql": "^2.17.1",
     "nodemailer": "^6.4.2",
     "nodemon": "^2.0.1",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
+    "react-day-picker": "^7.4.0",
     "react-dom": "^16.12.0",
+    "react-helmet": "^5.2.1",
     "react-password-strength": "^2.4.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
   },
   "scripts": {
