--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-bootstrap": "^1.0.0-beta.16",
     "react-day-picker": "^7.4.0",
     "react-dom": "^16.12.0",
+    "react-fade-in": "^0.1.8",
     "react-helmet": "^5.2.1",
+    "react-lottie": "^1.2.3",
     "react-password-strength": "^2.4.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
