--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.19.2",
     "cors": "^2.8.5",
     "gh-pages": "^2.1.1",
+    "jasmine": "^3.5.0",
     "moment": "^2.24.0",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
