--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,8 +12,9 @@ jobs:
 
     - name: Build
       run: |
-        npm install
-        npm run-script build
+        sudo npm install yarn -g
+        yarn
+        yarn run-script build
 
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@releases/v3
