--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - master
 jobs:
-  build-and-deploy:
+  Build-Test-Deploy:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
