--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -1,11 +1,11 @@
+name: SonarCloud Trigger
 on: push
-name: Main Workflow
 jobs:
-  sonarCloudTrigger:
+  SonarCloudTrigger:
     name: SonarCloud Trigger
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
+    - uses: actions/checkout@v1
     - name: SonarCloud Scan
       uses: sonarsource/sonarcloud-github-action@master
       env:
