--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-scripts": "3.2.0",
     "react-share": "^4.0.1",
     "react-sharingbuttons": "^1.0.0",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "yarn": "^1.22.4"
   },
   "scripts": {
     "start": "react-scripts start",
